$Id: NEWS,v 1.115 2008/02/29 11:34:15 rocky Exp $

version 0.80
2008-03-15

- Add get_media_changed for FreeBSD
- Add option to log summary output in cd-paranoia
- More string bounds checking to eliminate known string overflow conditions,
  e.g. Savannah bug #21910

version 0.79
2007-10-27

- iso-read: Add --ignore -k to ignore errors. 

- Fix Savannah Bugs #18522, #18563, #18131 #19221 (possibly), #19880,
  #21147 and other miscelleaneous bugs and memory leaks

- cd-info: force CDDB disc id to be 32-bits. Problem reported 
           by Eric Shattow.
- cd-paranoia: allow ripping before the first track. Problem reported 
               by Eric Shattow.
- Support for multisession CD-Extra Discs - via of Patrick Guimond

- Add iso9660_fs_find_lsn_with_path and iso9660_ifs_find_lsn_with_path
  to report the full filename path of lsn.

- improve eject code for OSX

version 0.78.2
2006-10-31
- preprocessor symbol LIBCDIO_VERSION number has to be an integer.
  (Bug caused by naming version 0.78.1)
                                     ^

version 0.78.1
2006-10-27

- Fix bug in libcdio.so version numbering. Also another small bug.
  Thanks to Janos Farkas 

version 0.78
2006-10-27
=====================================
- add mmc-tool
- add mmc-close-tray
- libudf: can now read (extract) file data, at least for ICB strategy 
          type 4.
- libcdio is starting to get updated for UTF-8 support. Strings,
  which are guaranteed to be in UTF-8, are returned as a new type
  cdio_utf8_t, which is typedef'd to char.
- fixes to eject. On GNU/Linux we unmount filesystems first.
  
version 0.77
=====================================
2006-03-17

- Add an object-oriented C++ wrapper. (libcdio++ and libiso9660++)

- replace libpopt with getopt in cd-drive, cd-info, iso-info, iso-read
  (Peter J. Creath)

- Document cd-paranoia (Peter J. Creath)

- Add cdio_eject_media_drive().

- Add more generic read_sectors() 

- Document that NULL also uses default drive in close_tray, cdio_open